--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
     "cypress": "^10.7.0",
+    "eslint": "^8.25.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
     "start-server-and-test": "^1.14.0",
