--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "cypress": "^10.7.0",
     "eslint": "^8.25.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
