--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
+    "stylelint": "^14.14.0",
+    "stylelint-config-standard": "^29.0.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vitest": "^0.23.0",
