--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vitest": "^0.23.0",
