--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "husky": "^8.0.1",
     "jsdom": "^20.0.0",
+    "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.5",
