--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint:stylelint": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "prepare": "husky install"
+    "prepare": "husky install && xcopy /E /S /I /Q /Y /F .husky\\. .git\\hooks\\"
   },
   "dependencies": {
     "pinia": "^2.0.21",
