--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,8 @@
 {
-    "*.{js,jsx,ts,tsx,vue}": [
+    "*.{js,ts,}": [
+        "eslint --fix"
+    ],
+    "*.{jsx,tsx,vue}": [
         "eslint --fix",
         "stylelint --fix"
     ],
