--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "lint": "vue-cli-service lint",
     "build-only": "vite build",
     "dev": "vite",
+    "lint:stylelint": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "prepare": "husky install && xcopy /E /S /I /Q /Y /F .husky\\. .git\\hooks\\",
     "preview": "vite preview --port 4173",
     "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint:stylelint": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "prepare": "husky install && xcopy /E /S /I /Q /Y /F .husky\\. .git\\hooks\\"
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "autoprefixer": "^10",
     "pinia": "^2.0.21",
+    "postcss": "^8",
+    "tailwindcss": "^3",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
@@ -53,6 +56,7 @@
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vitest": "^0.23.0",
+    "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-tsc": "^0.40.7"
   }
 }
